--- a/Wordpress/Dockerfile
+++ b/Wordpress/Dockerfile
@@ -4,4 +4,6 @@ MAINTAINER Jeff Benson <jbenson14@liberty.edu>
 
 COPY postscript.sh /var/www/html
 
-RUN chmod +x /var/www/html/postscript.sh
+RUN chmod +x /var/www/html/postscript.sh &&\
+    /var/www/html/postscript.sh
+#RUN chmod +x /var/www/html/postscript.sh
