--- a/old_wordpress/Dockerfile
+++ b/old_wordpress/Dockerfile
@@ -1,4 +1,5 @@
-FROM php:5.6.31-apache
+FROM wordpress
+#php:5.6.31-alpine
 
 MAINTAINER Jeff Benson <jbenson14@liberty.edu>
 
@@ -9,15 +10,16 @@ EXPOSE 80
 
 WORKDIR /var/www/html
 
-RUN docker-php-ext-install mysql
+#RUN docker-php-ext-install mysql
 
 RUN curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar && \
 	chmod +x wp-cli.phar && \
 	mv wp-cli.phar /usr/local/bin/wp
 
-RUN wp core download --path=/var/www/html/ --locale=en_US --version=latest --force --allow-root && \
-	wp config create --path=/var/www/html/ --dbname=mysql --dbuser=root --dbpass=example --dbhost=localhost --skip-salts --skip-check --force --allow-root && \
-	wp core install --path=/var/www/html/ --url=localhost --debug --path=/var/www/html --title=MYAWESOMESITE --admin_user=admin --admin_email=test@testing.com --admin_password=admin --allow-root && \
-	wp plugin install --activate --path=/var/www/html/ advanced-custom-fields --allow-root && \
+	#wp core download --path=/var/www/html/ --locale=en_US --version=latest --force --allow-root && \
+	#wp config create --path=/var/www/html/ --dbname=wordpress --dbuser=root --dbpass=example --dbhost=192.168.2.1:3306 --allow-root && \
+	#wp core install --path=/var/www/html/ --url=localhost --debug --path=/var/www/html --title=MYAWESOMESITE --admin_user=admin --admin_email=test@testing.com --admin_password=admin --allow-root && \
+RUN	wp plugin install --activate --path=/var/www/html/ advanced-custom-fields --allow-root && \
 	wp plugin install --activate --path=/var/www/html/ tinymce-advanced --allow-root && \
-	wp plugin install --activate--path=/var/www/html/ wordpress-seo --allow-root
+	wp plugin install --activate --path=/var/www/html/ wordpress-seo --allow-root && \
+	wp plugin list --allow-root
