--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,8 @@ services:
         restart: always
         ports:
             - 8080:80
-        volumes:
-            -.:/var/www/html
+        #volumes:
+        #    -.:/var/www/html
         environment:
             WORDPRESS_DB_HOST: db
             WORDPRESS_DB_NAME: wordpress
