--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.3'
 
 services:
     wordpress:
-        image: wordpress-lu-dev
+        image: jeffersonbenson/wordpress-lu-dev
         #build: Wordpress
         links:
             - db:mysql
