--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,9 +16,9 @@ services:
             WORDPRESS_DB_NAME: wordpress
             WORDPRESS_DB_USER: root
             WORDPRESS_DB_PASSWORD: example
-    
     db:
         #restart: unless-stopped
-        image: mysql:5.7
+        image: jeffersonbenson/wordpress-db-dev
+       #image: mysql:5.7
         environment:
             MYSQL_ROOT_PASSWORD: example
